--- a/views/AdminMenu.html
+++ b/views/AdminMenu.html
@@ -1,1 +1,24 @@
-<div class="panel panel-default"><div class="panel-heading"><h3 class="panel-title">New Questions</h3></div><div class="panel-body"><p><button type="button" class="btn btn-primary" data-ui-sref="admin.newquestion">Add New Question</button></p></div></div><div class="panel panel-default"><div class="panel-heading"><h3 class="panel-title">Existing Questions</h3></div><div class="panel-body"><p><button type="button" class="btn btn-primary" data-ui-sref="admin.viewquestions">View Questions</button></p><p><button type="button" class="btn btn-primary" data-ui-sref="poll">Answer Questions</button></p></div></div>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h3 class="panel-title">New Questions</h3>
+	</div>
+	<div class="panel-body">
+		<p>
+			<button type="button" class="btn btn-primary" data-ui-sref="admin.newquestion">Add New Question</button>
+		</p>
+	</div>
+</div>
+
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h3 class="panel-title">Existing Questions</h3>
+	</div>
+	<div class="panel-body">
+		<p>
+			<button type="button" class="btn btn-primary" data-ui-sref="admin.viewquestions">View Questions</button>
+		</p>
+		<p>
+			<button type="button" class="btn btn-primary" data-ui-sref="poll">Answer Questions</button>
+		</p>
+	</div>
+</div>
